# Toy.Harlequin

./: LICENSE  index.html  package-lock.json  package.json  session.js  tsconfig.json
data/: piano-grand.sf2
napi/: .gitignore  Cargo.toml  build.rs  index.js  package-lock.json  package.json
napi/etc/: reference.c
napi/src/: lib.rs
src/: index.ts  keyboard.ts  music.ts  sheet-music.ts
src/components/: app.vue  sheet.vue
