[package]
edition = "2018"
name = "fluidsynth"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.7.0", features = ["serde-json", "async"]}
napi-derive = "2.7.0"
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1"
nix = "0.23.0"
libc = "0.2.127"
pkg-config = "0.3.25"

[build-dependencies]
napi-build = "1"
pkg-config = "0.3.25"

[profile.release]
lto = true
